fixed get all tasks to get all tasks by user
